Added Finsh to Coin Page, added finish of calcPage

--- a/MobileAppProjectV2/MobileAppProjectV2/MobileAppProjectV2.csproj
+++ b/MobileAppProjectV2/MobileAppProjectV2/MobileAppProjectV2.csproj
@@ -10,6 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\coin_tex_head.png" />
+    <None Remove="Images\coin_tex_tail.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Images\coin_tex_tail.png" />
+    <EmbeddedResource Include="Images\coin_tex_head.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
 
